add video analisys artifacts entities and add services and functionalities
